<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">米饭之家</string>
    
    <string name="title_activity_login">登录</string>
    <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_login">登录</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">Email</string>
    <string name="login_password_hint">密码</string>
    <string name="login_register_link">没有帐号？ <a href="#">注册</a></string>
    
	<string name="http_status_code_error">网络异常，错误码：%d</string>
	<string name="http_exception_error">网络异常，请求超时</string>
	<string name="socket_exception_error">网络异常，读取数据超时</string>
	<string name="network_not_connected">网络连接失败，请检查网络设置</string>
	<string name="xml_parser_failed">数据解析异常</string>
	<string name="io_exception_error">文件流异常</string>
	<string name="app_run_code_error">应用程序运行时异常</string>

</resources>
